--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@nestjs/common": "7.6.13",
     "@nestjs/core": "7.6.13",
     "@nestjs/platform-express": "7.6.13",
+    "@types/jsonwebtoken": "^8.5.0",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "6.6.6",
